--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -7,11 +7,17 @@
 
 <body>
   <h1>Список книг</h1>
-  <ul>
-    {% for book in books %}
-      <li>{{ book.title }} ({{ book.author }})</li>
-    {% endfor %}
-  </ul>
+
+  {% if books %}
+    <ul>
+      {% for book in books %}
+        <li>{{ book.title }} ({{ book.author }})</li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p><i>Книг покуда не наличествует.</i></p>
+  {% endif %}
+
   <a href="{{ url_for('index') }}">На главную</a>
 </body>
 
